// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyInputModalInfoRow renders an info row for a modal with currency input 1`] = `
<div>
  <div
    class="tc__currency-input-modal__info-row"
  >
    <div
      class="tc__currency-input-modal__info-row-label"
      style="font-style: normal; font-size: 16px; line-height: 24px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'DM Sans', sans-serif; opacity: 1;"
    >
      Amount
    </div>
    <div
      class="tc__currency-input-modal__info-row-value"
      style="font-style: normal; font-size: 16px; line-height: 24px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'Azeret Mono', monospace; opacity: 1;"
    >
      1.2345
    </div>
    <div
      class="tc__currency-input-modal__info-row-currency"
      style="font-style: normal; font-size: 16px; line-height: 24px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'DM Sans', sans-serif; opacity: 1;"
    >
      ETH
    </div>
    <div
      class="tc__currency-input-modal__info-row-fiat-value"
      style="font-style: normal; font-size: 12px; line-height: 16px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'Azeret Mono', monospace; opacity: 1;"
    />
    <div
      class="tc__currency-input-modal__info-row-fiat"
      style="font-style: normal; font-size: 12px; line-height: 16px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'DM Sans', sans-serif; opacity: 1;"
    >
      USD
    </div>
  </div>
</div>
`;

exports[`CurrencyInputModalInfoRow renders an info row with a down arrow for a modal with currency input 1`] = `
<div>
  <div
    class="tc__currency-input-modal__info-row"
  >
    <div
      class="tc__currency-input-modal__info-row-label"
      style="font-style: normal; font-size: 16px; line-height: 24px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'DM Sans', sans-serif; opacity: 1;"
    >
      Amount
    </div>
    <div
      class="tc__currency-input-modal__value-change"
    >
      <svg
        class="tc__icon tc__icon-minus"
        fill="none"
        height="12"
        viewBox="0 0 16 16"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0.994746 9L7.01226 8.99296H8.98774L15.0053 9C15.2691 9 15.5221 8.89464 15.7086 8.70711C15.8952 8.51957 16 8.26522 16 8C16 7.73478 15.8952 7.48043 15.7086 7.29289C15.5221 7.10536 15.2691 7 15.0053 7L8.98774 7.00704H7.01226L0.994745 7C0.730922 7 0.477905 7.10536 0.291354 7.29289C0.104803 7.48043 0 7.73478 0 8C0 8.26522 0.104803 8.51957 0.291354 8.70711C0.477905 8.89464 0.730923 9 0.994746 9Z"
          fill="#222222"
        />
      </svg>
    </div>
    <div
      class="tc__currency-input-modal__info-row-value"
      style="font-style: normal; font-size: 16px; line-height: 24px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'Azeret Mono', monospace; opacity: 1;"
    >
      1.2345
    </div>
    <div
      class="tc__currency-input-modal__info-row-currency"
      style="font-style: normal; font-size: 16px; line-height: 24px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'DM Sans', sans-serif; opacity: 1;"
    >
      ETH
    </div>
    <div
      class="tc__currency-input-modal__info-row-fiat-value"
      style="font-style: normal; font-size: 12px; line-height: 16px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'Azeret Mono', monospace; opacity: 1;"
    />
    <div
      class="tc__currency-input-modal__info-row-fiat"
      style="font-style: normal; font-size: 12px; line-height: 16px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'DM Sans', sans-serif; opacity: 1;"
    >
      USD
    </div>
  </div>
</div>
`;

exports[`CurrencyInputModalInfoRow renders an info row with an up arrow for a modal with currency input 1`] = `
<div>
  <div
    class="tc__currency-input-modal__info-row"
  >
    <div
      class="tc__currency-input-modal__info-row-label"
      style="font-style: normal; font-size: 16px; line-height: 24px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'DM Sans', sans-serif; opacity: 1;"
    >
      Amount
    </div>
    <div
      class="tc__currency-input-modal__value-change"
    >
      <svg
        class="tc__icon tc__icon-plus"
        fill="none"
        height="12"
        viewBox="0 0 16 16"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.99475 15.0053C8.99475 15.2691 8.88994 15.5221 8.70339 15.7086C8.51684 15.8952 8.26382 16 8 16C7.73618 16 7.48316 15.8952 7.29661 15.7086C7.11006 15.5221 7.00526 15.2691 7.00526 15.0053L7.01226 8.98774L0.994746 8.99475C0.730923 8.99475 0.477905 8.88994 0.291354 8.70339C0.104803 8.51684 0 8.26382 0 8C0 7.73618 0.104803 7.48316 0.291354 7.29661C0.477905 7.11006 0.730922 7.00526 0.994745 7.00526L7.01226 7.01226L7.00525 0.994746C7.00525 0.730923 7.11006 0.477905 7.29661 0.291354C7.48316 0.104803 7.73618 0 8 0C8.26382 0 8.51684 0.104803 8.70339 0.291354C8.88994 0.477905 8.99475 0.730923 8.99475 0.994746L8.98774 7.01226L15.0053 7.00526C15.2691 7.00526 15.5221 7.11006 15.7086 7.29661C15.8952 7.48316 16 7.73618 16 8C16 8.26382 15.8952 8.51684 15.7086 8.70339C15.5221 8.88994 15.2691 8.99475 15.0053 8.99475L8.98774 8.98774L8.99475 15.0053Z"
          fill="#222222"
        />
      </svg>
    </div>
    <div
      class="tc__currency-input-modal__info-row-value"
      style="font-style: normal; font-size: 16px; line-height: 24px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'Azeret Mono', monospace; opacity: 1;"
    >
      1.2345
    </div>
    <div
      class="tc__currency-input-modal__info-row-currency"
      style="font-style: normal; font-size: 16px; line-height: 24px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'DM Sans', sans-serif; opacity: 1;"
    >
      ETH
    </div>
    <div
      class="tc__currency-input-modal__info-row-fiat-value"
      style="font-style: normal; font-size: 12px; line-height: 16px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'Azeret Mono', monospace; opacity: 1;"
    />
    <div
      class="tc__currency-input-modal__info-row-fiat"
      style="font-style: normal; font-size: 12px; line-height: 16px; color: rgb(34, 34, 34); font-weight: 500; font-family: 'DM Sans', sans-serif; opacity: 1;"
    >
      USD
    </div>
  </div>
</div>
`;
